# 3D-CV

./: CMakeLists.txt  build.sh  run.sh
.qt/: QtDeploySupport.cmake
src/: Hexahedron.cpp  PointCloud.cpp  Scene.cpp  StereioCamera.cpp  StereoCamera.h  glwidget.cpp  glwidget.h  main.cpp  perspectivecamera.cpp  perspectivecamera.h
